[package]
name = "tiron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
# crossterm = "0.25"
# tui = { version = "0.19", default-features = false, features = ['crossterm'] }
ironcalc = { version = "0.1.0", path = "../ironcalc/xlsx" }
ratatui = "0.26.0"
